[tool.poetry]
name = "subenum"
repository = "https://github.com/EONRaider/SubdomainEnumerator"
version = "0.1.0"
description = "Enumerate subdomains of different targets through external APIs and active methods"
authors = ["EONRaider <livewire_voodoo@protonmail.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"
reconlib = "^0.4.5"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
